fix word wrap in tweet textarea bug

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -43,6 +43,10 @@
   border-left: none;
   border-right: none;
   padding: 0 0 0 0;
+
+}
+
+.tweet-text {
   word-break: break-all;
   overflow-wrap: break-word;
 }
